2018-10-31  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS: 
	* VERSION:
	preparing for 1.039 release with LundPlane 1.0.2

2018-10-30  Gavin Salam  <gavin.salam@cern.ch>

	* contribs.svn:
	updated LundPlane to 1.0.2

2018-10-25  Gavin Salam  <gavin.salam@cern.ch>

        * DEVEL-GUIDELINES
        * README
        * scripts/internal/common.sh
	* scripts/internal/check-updates.sh
        * scripts/internal/generate-html-contents.pl
        * scripts/internal/release-fjcontrib.sh
	work in progress to move things over to the new hepforge system.

2018-08-30  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION:
	* NEWS:
	prepared release of 1.038 with LundPlane 1.0.1

	* contribs.svn:
	added LundPlane version 1.0.1

2018-08-23  Gavin Salam  <gavin.salam@cern.ch> + Matteo

	* scripts/internal/get-author-emails.py:
	added script to extract all author emails

2018-08-23  Gavin Salam  <gavin.salam@cern.ch>

	* scripts/update-contribs.sh:
	documented the --force option in the help message

2018-07-20  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION: 
	* NEWS:
	* contribs.svn:
	prepared release of 1.037 with ConstituentSubtractor updated to 1.3.1

2018-06-06  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION: 
	* NEWS:
	prepared release of 1.036.

	* contribs.svn:
	updated Nsubjettiness to 2.2.5, with fix for bug involving
	undefined pointer for in AxesDefinition

2018-05-29  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION:
	* NEWS:
	prepared for the release of 1.035

	* contribs.svn:
	updated RecursiveTools to 2.0.0-beta2 with bug fix for recent
	clang compilers.

2018-05-28  Gavin Salam  <gavin.salam@cern.ch>

	* contribs.svn:
	updated ConstituentSubtractor to 1.2.7 (extra features, clearer examples)

2018-05-18  Gregory Soyez  <soyez@fastjet.fr>

	* VERSION:
	* NEWS:
	prepared for the release of 1.034

	* contribs.svn:
	upped ConstituentSubtractor to 1.2.5 (fixing a bug)

	* scripts/internal/Template/Makefile
	added CXXFLAGS to the compilation of the examples
