@@ -4,11 +4,13 @@
 # svn repositories for read and write access
 #svn_read=http://fastjet.hepforge.org/svn/contrib
 #svn_write=https://fastjet.hepforge.org/svn/contrib
-fastjet_web_dir=~fastjet/public_html
+#svn_write=svn+ssh://svn.hepforge.org/hepforge/svn/fastjet/contrib
+#fastjet_web_dir=~fastjet/public_html
 svn_read=svn+ssh://vcs@phab.hepforge.org/source/fastjetsvn/contrib
 svn_write=svn+ssh://vcs@phab.hepforge.org/source/fastjetsvn/contrib
 fastjet_web_dir=/hepforge/projects/fastjet/public_html
-#svn_write=svn+ssh://svn.hepforge.org/hepforge/svn/fastjet/contrib
+
+export svn_read svn_write fastjet_web_dir
 
 # get the svn URL and fill 
 #  - mode : ro if http:// access; rw otherwise
